--- a/build.gradle
+++ b/build.gradle
@@ -45,8 +45,11 @@ dependencies {
     api "org.slf4j:slf4j-api:$slf4jVersion",
             "commons-codec:commons-codec:$commonsCodecVersion",
             "org.apache.commons:commons-lang3:$commonsLangVersion",
-            "org.apache.commons:commons-collections4:$commonsCollectionsVersion",
-            "commons-validator:commons-validator:$commonsValidatorVersion"
+            "org.apache.commons:commons-collections4:$commonsCollectionsVersion"
+
+    api ("commons-validator:commons-validator:$commonsValidatorVersion") {
+        exclude group: 'commons-collections', module: 'commons-collections'
+    }
 
     // optional timezone caching..
     implementation 'javax.cache:cache-api:1.1.1', optional
